# telemetry-viewer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  cmake.bat  resources.qrc
.github/workflows/: build-ci.yml  build-release.yml
cmake/: target.cmake
resources/: chart-boxplot.js  chart.html
resources/ui/: document_window.ui  test_runner_dialog.ui
samples/: xp12.0.8 fps test.tlm
source/: CMakeLists.txt  main.cpp
source/model/: generic_tree_item.cpp  generic_tree_item.h  generic_tree_model.cpp  generic_tree_model.h  performance_data.cpp  performance_data.h  telemetry_container.cpp  telemetry_container.h  telemetry_reader.cpp  telemetry_reader.h
source/parser/: CMakeLists.txt
source/parser/telemetry/: container.cpp  container.h  data.h  event.cpp  event.h  known_providers.h  parser.cpp  parser.h  provider.cpp  provider.h  statistic.cpp  statistic.h
source/utilities/: color.h  data_decimator.cpp  data_decimator.h  performance_calculator.cpp  performance_calculator.h  providers.h  run_statistics.cpp  run_statistics.h  settings.cpp  xplane_installations.cpp
source/viewer/: Application.cpp  Application.h  CMakeLists.txt  application.cpp  application.h  main.cpp
source/viewer/model/: TelemetryDocument.cpp  TelemetryDocument.h  XplaneInstallation.cpp  XplaneInstallation.h  recently_opened.cpp  recently_opened.h  telemetry_document.cpp  telemetry_document.h  xplane_installation.cpp  xplane_installation.h
source/viewer/utilities/: DataDecimator.cpp  DataDecimator.h  PerformanceCalculator.cpp  PerformanceCalculator.h  RunningAverage.h  Settings.cpp  Settings.h  color.h  data_decimator.cpp  performance_calculator.cpp  performance_calculator.h  xplane_installations.h
source/viewer/widgets/: ChartCallout.cpp  ChartCallout.h  ChartEvent.cpp  ChartEvent.h  ChartWidget.cpp  ChartWidget.h  DocumentWindow.cpp  DocumentWindow.h  DocumentWindow.ui  TestRunnerDialog.cpp  TestRunnerDialog.h  TestRunnerDialog.ui  TimePickerWidget.cpp  TimePickerWidget.h  TimelineWidget.cpp  TimelineWidget.h  chart_widget.cpp  chart_widget.h  document_window.cpp  document_window.h  document_window.ui  test_runner_dialog.cpp  test_runner_dialog.h  test_runner_dialog.ui  time_picker_widget.cpp  time_picker_widget.h  timeline_widget.cpp  timeline_widget.h
source/widgets/: chart_widget.cpp  chart_widget.h  document_window.cpp  document_window.h  document_window.ui  test_runner_dialog.cpp  test_runner_dialog.h  test_runner_dialog.ui  time_picker_widget.cpp  time_picker_widget.h  timeline_widget.cpp  timeline_widget.h
